--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ form {
   font-size: 16px;
   background-color: #dcd3ff;
   padding: 20px;
-
+  line-height: 2;
   border-left: 3px solid #885df1;
   box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
 }
