--- a/index.css
+++ b/index.css
@@ -26,9 +26,22 @@ h1 {
 header {
   margin-bottom: 30px;
 }
+.form-wrapper {
+  background-color: #f7f3ff;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  padding: 15px 20px;
+}
+#hint {
+  line-height: 1.5;
+  font-size: 12px;
+  margin-top: 5px;
+  opacity: 0.6;
+}
 form {
   padding: 30px;
-  background-color: white;
+  background-color: #f7f3ff;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   border-radius: 10px;
   display: flex;
@@ -46,7 +59,7 @@ form {
 .submit-button {
   margin-left: 10px;
   background: #885df1;
-  color: white;
+  color: #f7f3ff;
   border: none;
   width: 150px;
   font-size: 16px;
@@ -61,8 +74,24 @@ form {
   border-left: 3px solid #885df1;
   box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
 }
+.hidden {
+  display: none;
+}
 footer {
   text-align: center;
   font-size: 12px;
   margin-top: 30px;
+}
+.thinking {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
